2003-12-09  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinWm.c: fix to memory leak on certain error cases.
	
	* generic/tkTextTag.c: fix reading of freed tag memory, by removing
	all references to freed tags.
	
2003-12-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/entry.n: clean up usage of 'edition' as a verb.

2003-12-05  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/text.test:
	* generic/tkText.c: after debate on sf, allow decreasing tab-stops, 
	hence removing any potential backwards incompatibility, even for
	buggy code. Added new test. [Bug 852949]
	
	* generic/tkText.h: 
	* generic/tkTextDisp.c: 
	* generic/tkTextTag.c: fix to performance problems in the text
	widget when inserting lines which wrap thousands of times 
	[Bug 853003].  Note that the text widget must now perform additional
	calculations (pixel heights) compared to Tk <= 8.4, and so some
	actions will be slower, be necessity.

2003-12-05  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* win/tkWinFont.c (Tk_MeasureChars): Fix indentation.  Fix memory
	leak.  Fix handling of TK_WHOLE_WORDS.

2003-12-04  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: disallow negative or decreasing tab-stops,
	which fixes [Bug 852949], but is a 

	*** POTENTIAL INCOMPATIBILITY *** 
	
	with Tk 8.4.5 or earlier, but only for code which assumed
	(incorrectly) that tab stops are relative to each other instead
	of relative to the widget's left edge.  Such code will now throw
	an error instead of doing the wrong thing.

	* generic/tkTextDisp.c: restore previous meaning of 
	-[xy]scrollcommand [Bug 852954], and remove unused argument
	to 'MeasureChars'

	* generic/tkTextWind.c:
	* generic/tkTextImage.c: better border handling and fixed
	typos in comments.
	
	* tests/text.test: tests for negative and decreasing tab stops.
	
	* doc/text.n: documentation of '-tabs', to clarify Tk's 
	longstanding interpretation of all distances as relative to